<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.home.geonamesdemo.BuscarLugarPorNombreActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_geoname">

        <EditText
            android:id="@+id/etx_nombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/background_edittext_spinner"
            android:hint="@string/ciudad_rio_parque_montaña"
            android:imeOptions="actionDone"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/rtl_multi"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <RelativeLayout
            android:id="@+id/rtl_multi"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext_spinner"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toTopOf="@+id/max_rows"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etx_nombre"
            app:layout_constraintVertical_chainStyle="packed">

            <org.home.geonamesdemo.view.MultiSpinner
                android:id="@+id/multi_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />
        </RelativeLayout>

        <EditText
            android:id="@+id/max_rows"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext_spinner"
            android:hint="@string/n_de_elementos_def_100_max_1000"
            android:inputType="number"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_buscar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rtl_multi"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button"
            android:text="@string/buscar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_rows"
            app:layout_constraintVertical_chainStyle="packed" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
