<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        tools:context="org.home.geonamesdemo.BuscarLugaresPorLatLngActivity"
        tools:showIn="@layout/activity_lugares_cercanos">

        <LinearLayout
            android:id="@+id/lnl_lat_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etx_latitud"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext_spinner"
                android:hint="@string/latitud_hint"
                android:inputType="numberDecimal|numberSigned"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />

            <EditText
                android:id="@+id/etx_longitud"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext_spinner"
                android:hint="@string/longitud_hint"
                android:inputType="numberDecimal|numberSigned"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnl_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnl_lat_long">

            <EditText
                android:id="@+id/etx_radio"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext_spinner"
                android:hint="@string/radio_def_10"
                android:inputType="numberSigned"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />

            <EditText
                android:id="@+id/etx_rows"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext_spinner"
                android:hint="@string/maximo_def_10"
                android:inputType="numberSigned"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rtl_multi_uno"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext_spinner"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnl_radio"
            app:layout_constraintVertical_chainStyle="packed">

            <Spinner
                android:id="@+id/spn_dialog_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:spinnerMode="dialog" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_buscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button"
            android:text="@string/buscar"
            app:layout_constraintTop_toBottomOf="@id/rtl_multi_uno" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_buscar">

            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textview"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="O"
                android:textColor="@color/primaryLightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/view2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view1"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/primaryLightColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textview"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:id="@+id/lnl_radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator">

            <EditText
                android:id="@+id/etx_radio2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext_spinner"
                android:hint="@string/radio_def_10"
                android:inputType="numberSigned"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />

            <EditText
                android:id="@+id/etx_rows2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/background_edittext_spinner"
                android:hint="@string/maximo_def_10"
                android:inputType="numberSigned"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingStart="8dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rtl_multi_dos"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edittext_spinner"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnl_radio2"
            app:layout_constraintVertical_chainStyle="packed">

            <Spinner
                android:id="@+id/spn_dialog_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:spinnerMode="dialog" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_buscar_cerca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_button"
            android:text="@string/buscar_cerca_a_mi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rtl_multi_dos" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>